adding csrf token validation

--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Admin Dashboard</h2>
 <nav>
-    <a href="/admin/article/new">Create New Article</a> |
+    <a href="/admin/article/create">Create New Article</a> |
     <a href="/admin/comments">Manage Comments</a>
 </nav>
 {% endblock %}
